[gd_scene load_steps=2 format=3 uid="uid://oskt4euxjg3l"]

[ext_resource type="Script" path="res://scripts/menu/optionSetting.gd" id="1_53fs5"]

[node name="optionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="optionSetting" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1_53fs5")

[node name="resolutionBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="resolutionLabel" type="Label" parent="HBoxContainer/optionSetting/resolutionBox"]
layout_mode = 2
text = "Resolution"

[node name="resolutionList" type="OptionButton" parent="HBoxContainer/optionSetting/resolutionBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="scaleModeBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="scalingModeLabel" type="Label" parent="HBoxContainer/optionSetting/scaleModeBox"]
layout_mode = 2
text = "Scaling
"

[node name="scalingMode" type="OptionButton" parent="HBoxContainer/optionSetting/scaleModeBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
item_count = 4
selected = 0
popup/item_0/text = "OFF"
popup/item_0/id = 0
popup/item_1/text = "Biliniar (Fastest)"
popup/item_1/id = 1
popup/item_2/text = "AMD FSR 1.0 (Fast)"
popup/item_2/id = 2
popup/item_3/text = "AMD FSR 2.2 (Slow)"
popup/item_3/id = 3

[node name="scaleBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="scalingSlider" type="HSlider" parent="HBoxContainer/optionSetting/scaleBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 50.0
max_value = 200.0
step = 5.0
value = 100.0
ticks_on_borders = true

[node name="scalingLabel" type="Label" parent="HBoxContainer/optionSetting/scaleBox"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "100% - 1920x1080"

[node name="fsrBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="fsrOptions" type="OptionButton" parent="HBoxContainer/optionSetting/fsrBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 0
item_count = 4
selected = 1
popup/item_0/text = "Performance"
popup/item_0/id = 0
popup/item_1/text = "Balanced"
popup/item_1/id = 1
popup/item_2/text = "Quality"
popup/item_2/id = 2
popup/item_3/text = "Ultra Quality"
popup/item_3/id = 3

[node name="fullscreenBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="fullscreenLabel" type="Label" parent="HBoxContainer/optionSetting/fullscreenBox"]
layout_mode = 2
text = "Fullscreen"

[node name="fullscreenCheckBox" type="CheckBox" parent="HBoxContainer/optionSetting/fullscreenBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="vsyncBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="vsyncLabel" type="Label" parent="HBoxContainer/optionSetting/vsyncBox"]
layout_mode = 2
text = "VSync"

[node name="vsyncCheckBox" type="CheckBox" parent="HBoxContainer/optionSetting/vsyncBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="shadowBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="shadowLabel" type="Label" parent="HBoxContainer/optionSetting/shadowBox"]
layout_mode = 2
text = "Shadows"

[node name="shadowToggle" type="CheckButton" parent="HBoxContainer/optionSetting/shadowBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ssaoBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="ssaoLabel" type="Label" parent="HBoxContainer/optionSetting/ssaoBox"]
layout_mode = 2
text = "SSAO"

[node name="ssaoToggle" type="CheckButton" parent="HBoxContainer/optionSetting/ssaoBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="glowBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="glowLabel" type="Label" parent="HBoxContainer/optionSetting/glowBox"]
layout_mode = 2
text = "Glow"

[node name="glowToggle" type="CheckButton" parent="HBoxContainer/optionSetting/glowBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BrightnessBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="brightnessLabel" type="Label" parent="HBoxContainer/optionSetting/BrightnessBox"]
layout_mode = 2
text = "Brightness"

[node name="BrightnessSlider" type="HSlider" parent="HBoxContainer/optionSetting/BrightnessBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.5
max_value = 2.0
step = 0.05
value = 1.0

[node name="brightnessLevel" type="Label" parent="HBoxContainer/optionSetting/BrightnessBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
text = "1.00"

[node name="fpsBox" type="HBoxContainer" parent="HBoxContainer/optionSetting"]
layout_mode = 2

[node name="fpsLabel" type="Label" parent="HBoxContainer/optionSetting/fpsBox"]
layout_mode = 2
text = "FPS Counter"

[node name="fpsCheckBox" type="CheckBox" parent="HBoxContainer/optionSetting/fpsBox"]
layout_mode = 2

[node name="backButton" type="Button" parent="HBoxContainer/optionSetting"]
layout_mode = 2
size_flags_vertical = 4
text = "Back"

[connection signal="item_selected" from="HBoxContainer/optionSetting/resolutionBox/resolutionList" to="HBoxContainer/optionSetting" method="_on_resolution_list_item_selected"]
[connection signal="item_selected" from="HBoxContainer/optionSetting/scaleModeBox/scalingMode" to="HBoxContainer/optionSetting" method="_on_scaling_mode_item_selected"]
[connection signal="value_changed" from="HBoxContainer/optionSetting/scaleBox/scalingSlider" to="HBoxContainer/optionSetting" method="_on_scaling_slider_value_changed"]
[connection signal="item_selected" from="HBoxContainer/optionSetting/fsrBox/fsrOptions" to="HBoxContainer/optionSetting" method="_on_fsr_options_item_selected"]
[connection signal="toggled" from="HBoxContainer/optionSetting/fullscreenBox/fullscreenCheckBox" to="HBoxContainer/optionSetting" method="_on_fullscreen_check_box_toggled"]
[connection signal="toggled" from="HBoxContainer/optionSetting/vsyncBox/vsyncCheckBox" to="HBoxContainer/optionSetting" method="_on_vsync_check_box_toggled"]
[connection signal="toggled" from="HBoxContainer/optionSetting/shadowBox/shadowToggle" to="HBoxContainer/optionSetting" method="_on_shadow_toggle_toggled"]
[connection signal="toggled" from="HBoxContainer/optionSetting/ssaoBox/ssaoToggle" to="HBoxContainer/optionSetting" method="_on_ssao_toggle_toggled"]
[connection signal="toggled" from="HBoxContainer/optionSetting/glowBox/glowToggle" to="HBoxContainer/optionSetting" method="_on_glow_toggle_toggled"]
[connection signal="value_changed" from="HBoxContainer/optionSetting/BrightnessBox/BrightnessSlider" to="HBoxContainer/optionSetting" method="_on_brightness_slider_value_changed"]
[connection signal="toggled" from="HBoxContainer/optionSetting/fpsBox/fpsCheckBox" to="HBoxContainer/optionSetting" method="_on_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/optionSetting/backButton" to="HBoxContainer/optionSetting" method="_on_back_button_pressed"]
